--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="popup.css">
+  </head>
+
   <body>
-    <h1>Curio</h1>
+
+    <div class="center">
+      <a href="https://github.com/GevChalikyan/Curio">
+        <img src="../images/temp-logo.png" alt="Curio" width="200" height="200" style="margin:0px 0px">
+        
+      </a>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
