--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,7 +7,7 @@
   <body>
 
     <div class="center">
-      <a href="https://github.com/GevChalikyan/Curio">
+      <a href="https://github.com/GevChalikyan/Curio" target="_blank" rel="noopener noreferrer">
         <img src="../images/temp-logo.png" alt="Curio" width="200" height="200" style="margin:0px 0px">
         
       </a>
