--- a/frontend/src/popup/popup.html
+++ b/frontend/src/popup/popup.html
@@ -6,15 +6,7 @@
 
   <body>
     
-    <div class="body">
-      <H1>
-        <i>
-          <b>
-            YURRRRRRR
-          </b>
-        </i>
-      </H1>
-    </div>
+    <div id="mainPage" class="body"></div>
 
     <div class="footer">
       <p>
