--- a/frontend/src/popup/popup.html
+++ b/frontend/src/popup/popup.html
@@ -5,13 +5,32 @@
   </head>
 
   <body>
-    
-    <div id="mainPage" class="body"></div>
+    <div id="mainPage" class="body">
+      <!-- Login Form -->
+      <div id="loginForm" class="form-container">
+        <h2>Welcome to Curio</h2>
+        <form id="loginFormElement">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+          </div>
+          <button type="submit" class="login-button">Sign In</button>
+        </form>
+      </div>
+
+      <!-- Welcome Message (hidden by default) -->
+      <div id="welcomeMessage" class="welcome-container" style="display: none;">
+        <h2>Welcome, <span id="usernameDisplay"></span>!</h2>
+        <button id="logoutButton" class="logout-button">Sign Out</button>
+      </div>
+    </div>
 
     <div class="footer">
-      <p>
-        Placeholder Text
-      </p>
+      <p>Curio - Webpage Aware Generative AI</p>
       <a href="https://github.com/GevChalikyan/Curio" target="_blank" rel="noopener noreferrer">
         <img class="social" src="../images/GitHub-logo.png" alt="Curio GitHub">
       </a>
