--- a/frontend/src/popup/popup.html
+++ b/frontend/src/popup/popup.html
@@ -6,7 +6,9 @@
 
   <body>
     
-    <div id="mainPage" class="body"></div>
+    <div id="mainPage" class="body">
+      
+    </div>
 
     <div class="footer">
       <p>
